--- a/src/main/resources/it/adamgolub/WeaThereAndHere/GridPaneMain.fxml
+++ b/src/main/resources/it/adamgolub/WeaThereAndHere/GridPaneMain.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -23,7 +24,7 @@
       <RowConstraints maxHeight="209.0" minHeight="10.0" prefHeight="152.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <VBox prefHeight="188.0" prefWidth="350.0" GridPane.rowIndex="1">
+      <VBox prefHeight="188.0" prefWidth="350.0" style="-fx-border-color: #595e5a; -fx-border-width: 0 1 0 0;" GridPane.rowIndex="1">
          <children>
             <HBox alignment="CENTER" prefHeight="27.0" prefWidth="304.0">
                <children>
@@ -35,6 +36,7 @@
                         <Insets top="10.0" />
                      </HBox.margin>
                   </Label>
+                  <Label fx:id="error" text="error" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="27.0" prefWidth="304.0">
@@ -57,7 +59,7 @@
                         </ImageView>
                      </children>
                   </VBox>
-                  <VBox prefHeight="175.0" prefWidth="175.0">
+                  <VBox prefHeight="175.0" prefWidth="261.0">
                      <children>
                         <HBox alignment="BOTTOM_LEFT" prefHeight="47.0" prefWidth="141.0">
                            <children>
@@ -218,9 +220,9 @@
                               </ImageView>
                            </children>
                         </VBox>
-                        <VBox prefHeight="134.0" prefWidth="141.0">
+                        <VBox prefHeight="173.0" prefWidth="215.0">
                            <children>
-                              <HBox alignment="BOTTOM_LEFT" prefHeight="47.0" prefWidth="141.0">
+                              <HBox alignment="BOTTOM_LEFT" prefHeight="47.0" prefWidth="155.0">
                                  <children>
                                     <Label fx:id="maxTempTodaySecondCity" text="3">
                                        <font>
@@ -345,7 +347,7 @@
             </VBox>
          </children>
       </VBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: #595e5a; -fx-border-width: 0 1 0 0;" GridPane.rowIndex="2">
          <children>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
@@ -1065,7 +1067,7 @@
             </VBox>
          </children>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="33.0" prefWidth="350.0">
+      <HBox alignment="CENTER" prefHeight="33.0" prefWidth="350.0" style="-fx-border-color: #595e5a; -fx-border-width: 0 1 0 0;">
          <children>
             <Label text="Wyszukaj miasto:  ">
                <font>
@@ -1073,6 +1075,7 @@
                </font>
             </Label>
             <TextField fx:id="searchingFirstCityName" style="-fx-background-color: #f1ffcc; -fx-border-color: #b5b5b5; -fx-border-radius: 4;" />
+            <Button mnemonicParsing="false" onAction="#changeUserCity" text="Button" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
